--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>Oliviac1224.GitHub.io</h1>
+          <h1>Olivia Campbell</h1>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/oliviac1224">oliviac1224</a></span>
@@ -36,7 +36,7 @@
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my web page.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub for Mac or GitHub for Windows, simply sync your repository and you’ll see the new branch.</p>
 
