updated index with new tree image and quote

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
   </head>
+  
+
   <body>
       <div id="header">
         <nav>
@@ -31,11 +32,22 @@
           <h1>Olivia Campbell</h1>
           <p></p>
           <hr>
-         <img src="images/profile.jpg" alt="">
+         <img src="images/oliviaTree.jpg" align="left" alt="tree" height="350" width="275">
          <br>
-         My name is Olivia. I am taking CIT 281 for my nimor and General Social Science is my major. I am a fourth year student. Go Ducks!  
+        <P>&nbsp;<P>"Computers are incedibly fast, accurate and stupid; humans are incedibly slow, inaccurate and brilliant; together they are powerful beyond imagination."
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>About me:</h2>
+   I am a General Social Science major and Computer Information Technology minor. I am a fourth year student at the University of Oregon. Go Ducks!
     
+
+
+
+
+    <!--[if !IE]><script>fixScale(document);</script><![endif]--> 
   </body>
 </html>
